stuf/src/p4/tests/t037.err
Semantic error on line 5: Variable 'my_rectangle' is not an array.
