stuf/src/p4/tests/t037.gpl
string window_title = "Project 4 t037.gpl ***PRESS q TO QUIT***";

rectangle my_rectangle(x = 42, y = 2, h = 100, w = 200, green = 1.0);

int x = my_rectangle[3].x * my_rectangle.y;
